Update the logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Welcome to AWS Static Website!</h1>
   <p>This site is hosted using Amazon S3 and deployed using AWS CodePipeline.</p>
-  <img src="images/aws-logo.png" alt="AWS Logo" width="200">
+  <img src="images/devops.png" alt="AWS DevOps Logo" width="200">
 </body>
 </html>
